// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`svelte/UIButton > renders correctly - basic 1`] = `
<div>
  <button
    class="ui-button ui-button--large"
    tabindex="0"
    type="button"
  >
     
    <span
      class="ui-button__label"
    >
      Test
    </span>
     
  </button>
  <!--&lt;Button&gt;-->
</div>
`;

exports[`svelte/UIButton > renders correctly - disabled 1`] = `
<div>
  <button
    class="ui-button ui-button--disabled"
    tabindex="-1"
    type="button"
  >
     
     
  </button>
  <!--&lt;Button&gt;-->
</div>
`;

exports[`svelte/UIButton > renders correctly - icon only 1`] = `
<div>
  <button
    class="ui-button ui-button--icon"
    tabindex="0"
    type="button"
  >
    <i
      class="ui-icon ui-icon--star"
    />
    <!--&lt;Icon&gt;-->
     
     
  </button>
  <!--&lt;Button&gt;-->
</div>
`;

exports[`svelte/UIButton > renders correctly - label with icon 1`] = `
<div>
  <button
    class="ui-button"
    tabindex="0"
    type="button"
  >
    <i
      class="ui-icon ui-icon--star"
    />
    <!--&lt;Icon&gt;-->
     
    <span
      class="ui-button__label"
    >
      Test
    </span>
     
  </button>
  <!--&lt;Button&gt;-->
</div>
`;

exports[`svelte/UIButton > renders correctly - no label 1`] = `
<div>
  <button
    class="ui-button"
    tabindex="0"
    type="button"
  >
     
     
  </button>
  <!--&lt;Button&gt;-->
</div>
`;

exports[`svelte/UIButton > renders correctly - right icon 1`] = `
<div>
  <button
    class="ui-button ui-button--icon"
    tabindex="0"
    type="button"
  >
     
     
    <i
      class="ui-icon ui-icon--star"
    />
    <!--&lt;Icon&gt;-->
  </button>
  <!--&lt;Button&gt;-->
</div>
`;

exports[`svelte/UIButton > renders correctly - type submit 1`] = `
<div>
  <button
    class="ui-button"
    tabindex="0"
    type="submit"
  >
     
    <span
      class="ui-button__label"
    >
      Test
    </span>
     
  </button>
  <!--&lt;Button&gt;-->
</div>
`;

exports[`svelte/UIButton > renders correctly - with id 1`] = `
<div>
  <button
    class="ui-button ui-button--large"
    id="test"
    tabindex="0"
    type="button"
  >
     
    <span
      class="ui-button__label"
    >
      Test
    </span>
     
  </button>
  <!--&lt;Button&gt;-->
</div>
`;
